src/components/person-card/person-card.module.css
.personCardContainer {
  display: flex;
  flex-direction: row;
  gap: 16px;
  padding-top: 100px;
  padding-bottom: 25px;
  border-bottom: 1px solid var(--border);
}

.textContainer {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.basicInfo {
  display: flex;
  flex-direction: column;
  gap: 5px;
}

.personCard {
  height: "100%";
  width: "100%";
  object-fit: cover;
  object-position: top center;
  border-radius: 10px;
  filter: grayscale(1);
}

.personCard:hover {
  filter: grayscale(0);
  transition: filter 0.3s ease-in-out;
}

.noMargin {
  margin: 0;
}

.title {
  color: var(--offWhite);
  font-weight: 100;
  font-size: 26px;
  letter-spacing: 2px;
}

.role {
  font-weight: 100;
  color: var(--greyWhite);
  font-size: 20px;
  letter-spacing: 1px;
}

.location {
  letter-spacing: 2px;
  font-size: 14px;
  color: var(--darkWhite);
  font-weight: 100;
  display: inline-block;
  margin-left: 5px;
}

.locationContainer {
  display: flex;
  align-items: center;
}

.workAvailability {
  color: var(--darkWhite);
  font-weight: 100;
  padding-bottom: 10px;
  letter-spacing: 1px;
}

.workAvailability::before {
  content: "";
  display: inline-block;
  height: 10px;
  width: 10px;
  border-radius: 50%;
  background-color: var(--brightGreen);
  margin-right: 5px;
}

.handlesContainer {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.handles {
  color: var(--darkWhite);
  font-weight: 100;
  font-size: 16px;
  letter-spacing: 1px;
  margin-left: 5px;
  cursor: pointer;
  letter-spacing: 1px;
}

.infoBox {
  display: flex;
  margin-top: 10px;
}

.infoBox > a {
  color: var(--darkWhite);
  margin-left: 10px;
  font-weight: 100;
  text-decoration: none;
}

.handles:hover,
.infoBox > a:hover {
  color: var(--offWhite);
  transition: all 0.3s ease-in-out;
}

.linekedInLink {
  text-decoration: none;
}

@media only screen and (max-width: 600px) {
  .basicInfo {
    gap: 8px;
  }

  .title {
    font-size: 20px;
  }

  .role {
    font-size: 12px;
  }

  .location {
    font-size: 10px;
    letter-spacing: 1px;
  }

  .workAvailability {
    font-size: 12px;
  }

  .handlesContainer {
    flex-direction: column;
    align-items: center;
  }
}

